--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,29 +8,12 @@
             "name": "Python Debugger: Django",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}\\manage.py",
             "args": [
                 "runserver"
             ],
-            "django": true
-        },
-        {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Python: Django",
-            "type": "python",
-            "request": "launch",
-            "args": [
-                "runserver",
-            ],
             "django": true,
-            "autoStartBrowser": true,
-            "program": "${workspaceFolder}\\manage.py"
+            "autoStartBrowser": false,
+            "program": "${workspaceFolder}/manage.py"
         }
     ]
 }
